Healing potions page - wip

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -31,7 +31,7 @@
 <p><a name="intro"></a>I saw some nice
 <a href="https://static.wikia.nocookie.net/criticalrole/images/7/77/Potion_of_healing.jpg/revision/latest?cb=20211007155023">health potion props on Critical Role</a>
 so I made a few for my own D&amp;D group.</p>
-<p>Each potion is a glass bottle with some tinted epoxy resin and some dice inside.
+<p>Each potion is a glass bottle with some tinted epoxy resin that looks like liquid and some dice inside.
 Potions can be handed out by the DM, and when a player wants to use one they open it and dump out the dice.</p>
 
 <h1><a name="materials"></a>Materials</h1>
@@ -53,7 +53,9 @@ Potions can be handed out by the DM, and when a player wants to use one they ope
 <p>The bottles must have mouths that are wide enough to easily dump the dice out.</p>
 <p>The epoxy resin only fills the bottom part of the bottle about 4 cm (1.5 in) deep, leaving plenty of room for the dice.
 The resin must be a type that can be poured to that depth. Some casting resin is limited to thin layers. The resin that I linked above works well.</p>
-<p>TODO: ink</p>
+<p>For colouring, you must use a pigment or dye that is compatible with the epoxy resin.
+Water-based ink or paint (e.g. acrylic) will <em>not</em> work properly.
+For the resin I have, alcohol-based artist's ink works. Check the documentation for your particular resin.</p>
 
 </main>
 
