Healing potions page - wip

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -53,7 +53,8 @@ Potions can be handed out by the DM, and when a player wants to use one they ope
 <aside><p>If you’ve never used epoxy resin, <a href="">here’s a tutorial</a>.</p></aside>
 <p>The bottles must have mouths that are wide enough to easily dump the dice out.</p>
 <p>The epoxy resin only fills the bottom part of the bottle about 4 cm (1.5 in) deep, leaving plenty of room for the dice.
-The resin must be a type that can be poured to that depth. Some casting resin is limited to thin layers. The resin that I linked above works well.</p>
+The resin must be a type that can be poured to that depth. Some casting resin is limited to thin layers.
+<a href="https://www.deserres.ca/products/3-pack-alcohol-inks-pink-red-spectrum?variant=40069299110021">This resin</a> works well.</p>
 <p>For colouring, you must use a pigment or dye that is compatible with the epoxy resin.
 Water-based ink or paint (e.g. acrylic) will <em>not</em> work properly.
 For the resin I have, alcohol-based artist’s ink works. Check the documentation for your particular resin.</p>
