--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -52,6 +52,7 @@ Potions can be handed out by the DM, and when a player wants to use one they ope
 <h1><a name="tips"></a>Tips</h1>
 <aside><p>If you’ve never used epoxy resin, <a href="">here’s a tutorial</a>.</p></aside>
 <p>The bottles must have mouths that are wide enough to easily dump the dice out.</p>
+<p>On the labels, I wrote the type of potion and the amount of healing, e.g. “Healing, 2d4+2”.</p>
 <p>The epoxy resin only fills the bottom part of the bottle about 4 cm (1.5 in) deep, leaving plenty of room for the dice.
 The resin must be a type that can be poured to that depth. Some casting resin is limited to thin layers.
 <a href="https://www.deserres.ca/products/3-pack-alcohol-inks-pink-red-spectrum?variant=40069299110021">This resin</a> works well.</p>
