Healing potions page - Use a different image and fix a couple of links

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -27,7 +27,7 @@
 </header>
 
 <main>
-<aside><img src="potion.jpg" alt="Potion bottle"></aside>
+<aside><a href="potions.jpg"><img src="potions.jpg" alt="Potion bottles"></a></aside>
 <p><a name="intro"></a>I saw some nice
 <a href="https://static.wikia.nocookie.net/criticalrole/images/7/77/Potion_of_healing.jpg/revision/latest?cb=20211007155023">health potion props on Critical Role</a>
 so I made a few for my own D&amp;D group.</p>
@@ -50,12 +50,12 @@ Potions can be handed out by the DM, and when a player wants to use one they ope
 </ul>
 
 <h1><a name="tips"></a>Tips</h1>
-<aside><p>If you’ve never used epoxy resin, <a href="">here’s a tutorial</a>.</p></aside>
+<aside><p>If you’ve never used epoxy resin, <a href="https://sweetredpoppy.com/diy-how-to-use-epoxy-resin-for-beginners/">here’s a tutorial</a>.</p></aside>
 <p>The bottles must have mouths that are wide enough to easily dump the dice out.</p>
 <p>On the labels, I wrote the type of potion and the amount of healing, e.g. “Healing, 2d4+2”.</p>
 <p>The epoxy resin only fills the bottom part of the bottle about 4 cm (1.5 in) deep, leaving plenty of room for the dice.
 The resin must be a type that can be poured to that depth. Some casting resin is limited to thin layers.
-<a href="https://www.deserres.ca/products/3-pack-alcohol-inks-pink-red-spectrum?variant=40069299110021">This resin</a> works well.</p>
+<a href="https://alumilite.com/products/amazing-deep-pour">This resin</a> works well.</p>
 <p>For colouring, you must use a pigment or dye that is compatible with the epoxy resin.
 Water-based ink or paint (e.g. acrylic) will <em>not</em> work properly.
 For the resin I have, alcohol-based artist’s ink works. Check the documentation for your particular resin.</p>
