Healing potions page - done

--- a/site-files/rpg/index.html
+++ b/site-files/rpg/index.html
@@ -25,9 +25,11 @@
 
 <main>
 
-<aside><img src="../assets/mini-200.jpg" alt="Berond"></aside>
+<aside><a href="potions/"><img src="potions/potions.jpg" alt="Potion bottles"></a></aside>
+<p>I made some fun <a href="potions/">healing potion props</a> for D&amp;D.</p>
 
-<p>Here are some RPG campaigns that I have run and played.</p>
+<aside><a href="mini.jpg"><img src="mini.jpg" alt="Berond"></a></aside>
+<p>Here are some RPG campaigns that I have run and played:</p>
 
 <dl>
     <dt><a href="https://www.worldanvil.com/w/zeitgeist---gears-of-revolution-lenp">
