--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -13,7 +13,7 @@
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Potion Bottles</h1>
-<p>Healing potions for your D&amp;D table</p>
+<p>Healing potions for your D&amp;D game</p>
 </hgroup>
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
@@ -30,14 +30,14 @@
 <aside><a href="potions.jpg"><img src="potions.jpg" alt="Potion bottles"></a></aside>
 <p><a name="intro"></a>I saw some nice
 <a href="https://static.wikia.nocookie.net/criticalrole/images/7/77/Potion_of_healing.jpg/revision/latest?cb=20211007155023">health potion props on Critical Role</a>
-so I made a few for my own D&amp;D group.</p>
+so I made a few for my own D&amp;D group. (In case we ever go back to playing at a table instead of online.)</p>
 <p>Each potion is a glass bottle with some tinted epoxy resin that looks like liquid and some dice inside.
 Potions can be handed out by the DM, and when a player wants to use one they open it and dump out the dice.</p>
 
 <h1><a name="materials"></a>Materials</h1>
-<p>Here are the materials needed to make these, with links to the particular ones I used.</p>
+<p>Here are the materials needed to make these, with links to the particular ones that I used.</p>
 <ul>
-<li>Glass bottles with corks/stoppers
+<li>Glass bottles with corks/stoppers/caps
 	(<a href="https://www.amazon.ca/dp/B07Z1YWHGP?ref=ppx_yo2ov_dt_b_fed_asin_title">link</a>
 	&ndash; These ones include corks and tags)</li>
 <li>Clear epoxy casting resin
