--- a/site-files/index.html
+++ b/site-files/index.html
@@ -43,6 +43,8 @@
     <dd>Device to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd>
     <dt><a href="https://github.com/Len42/OpAmpTester/#readme-ov-file">Op Amp Tester</a></dt>
     <dd>Tests op amp chips to verify that they are working</dd>
+    <dt><a href="rpg/potions/">Potion bottles for D&amp;D</a></dt>
+    <dd>Cool healing potion props for your D&amp;D game</dd>
 </dl>
 
 <h2>Archived Projects</h2>
