Add a link to Travellers Anonymous

--- a/site-files/rpg/index.html
+++ b/site-files/rpg/index.html
@@ -32,6 +32,11 @@
 <p>Here are some RPG campaigns that I have run and played:</p>
 
 <dl>
+    <dt><a href="https://www.worldanvil.com/w/travellers-anonymous-lenp">
+        Travellers Anonymous</a></dt>
+    <dd>Info about my
+        <a href="https://www.mongoosepublishing.com/collections/start-here">Traveller 2e</a>
+        campaign</dd>
     <dt><a href="https://www.worldanvil.com/w/zeitgeist---gears-of-revolution-lenp">
         Zeitgeist – Gears of Revolution</a></dt>
     <dd>Additional info for my players in the
