wordler: edit home page text

--- a/site-files/index.html
+++ b/site-files/index.html
@@ -70,7 +70,7 @@
     <dd>How to fix SSL certificate verification errors in CircuitPython</dd>
 </dl>
 
-<h2>Software Utilities</h2>
+<h2>Useful Software</h2>
 <dl>
     <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a> (software version)</dt>
     <dd>Program to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats.</dd>
