potion bottles - minor edits

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -31,8 +31,8 @@
 <p><a name="intro"></a>I saw some nice
 <a href="https://static.wikia.nocookie.net/criticalrole/images/7/77/Potion_of_healing.jpg/revision/latest?cb=20211007155023">health potion props on Critical Role</a>
 so I made a few for my own D&amp;D group. (In case we ever go back to playing at a table instead of online.)</p>
-<p>Each potion is a glass bottle with some tinted epoxy resin that looks like liquid and some dice inside.
-Potions can be handed out by the DM, and when a player wants to use one they open it and dump out the dice.</p>
+<p>Each potion is a glass bottle containing some tinted epoxy resin that looks like liquid and some dice.
+Potions can be handed out by the DM. When a player wants to use one, they open it and dump out the dice.</p>
 
 <h1><a name="materials"></a>Materials</h1>
 <p>Here are the materials needed to make these, with links to the particular ones that I used.</p>
