--- a/site-files/index.html
+++ b/site-files/index.html
@@ -37,14 +37,14 @@
 
 <h2>Recent Projects</h2>
 <dl>
+    <dt><a href="rpg/potions/">Potion bottles for D&amp;D</a></dt>
+    <dd>Cool healing potion props for your D&amp;D game</dd>
     <dt><a href="synth/">Modular Synth</a></dt>
     <dd>Designs for <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> synthesizer modules</dd>
     <dt><a href="projects/asentry/">asentry</a> 🌎🌠</dt>
     <dd>Device to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd>
     <dt><a href="https://github.com/Len42/OpAmpTester/#readme-ov-file">Op Amp Tester</a></dt>
     <dd>Tests op amp chips to verify that they are working</dd>
-    <dt><a href="rpg/potions/">Potion bottles for D&amp;D</a></dt>
-    <dd>Cool healing potion props for your D&amp;D game</dd>
 </dl>
 
 <h2>Archived Projects</h2>
@@ -70,8 +70,10 @@
     <dd>How to fix SSL certificate verification errors in CircuitPython</dd>
 </dl>
 
-<h2>Software Utilities</h2>
+<h2>Useful Software</h2>
 <dl>
+    <dt><a href="projects/wordler/">wordler</a></dt>
+    <dd>C++ program to solve Wordle</dd>
     <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a> (software version)</dt>
     <dd>Program to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats.</dd>
     <dt><a href="https://github.com/Len42/NetToBOM/#readme-ov-file">NetToBOM</a></dt>
