--- a/site-files/projects/wordler/index.html
+++ b/site-files/projects/wordler/index.html
@@ -65,13 +65,12 @@ Best guess is "block"
 <p>And so on, until the game is over.</p>
 
 <h2>Other Options</h2>
-<p>wordler can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options.</p>
+<p>wordler can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options. Here are the important ones:</p>
 
 <dl class="inline">
 <dt><kbd>--solve &lt;word&gt;</kbd></dt><dd>Solve for the given answer word</dd>
 <dt><kbd>--all</kbd></dt><dd>Solve all possible answer words (this takes a long time!)</dd>
 <dt><kbd>--stats</kbd></dt><dd>Display stats from a results file that was produced by <kbd>--all</kbd></dd>
-<dt><kbd>--test=&lt;num&gt;</kbd></dt><dd>Run a specified test</dd>
 </dl>
 
 <h1><a name="works"></a>How It Works</h1>
