wordler page - wip

--- a/site-files/projects/wordler/index.html
+++ b/site-files/projects/wordler/index.html
@@ -70,7 +70,7 @@ Best guess is "block"
 <dl class="inline">
 <dt><kbd>--solve &lt;word&gt;</kbd></dt><dd>Solve for the given answer word</dd>
 <dt><kbd>--all</kbd></dt><dd>Solve all possible answer words (this takes a long time!)</dd>
-<dt><kbd>--stats</kbd></dt><dd>Display stats from a results file that was produced by <kbd>--all</kbd></dd>
+<dt><kbd>--stats &lt;file&gt;</kbd></dt><dd>Display stats from a results file that was produced by <kbd>--all</kbd></dd>
 </dl>
 
 <h1><a name="works"></a>How It Works</h1>
