wordler page - wip

--- a/site-files/projects/wordler/index.html
+++ b/site-files/projects/wordler/index.html
@@ -65,7 +65,7 @@ Best guess is "block"
 <p>And so on, until the game is over.</p>
 
 <h2>Other Options</h2>
-<p>wordler can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options. Here are the important ones:</p>
+<p>wordler can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options. Here are the fun ones:</p>
 
 <dl class="inline">
 <dt><kbd>--solve &lt;word&gt;</kbd></dt><dd>Solve for the given answer word</dd>
