wordler page - move do dev directory

--- a/site-files/index.html
+++ b/site-files/index.html
@@ -72,7 +72,7 @@
 
 <h2>Useful Software</h2>
 <dl>
-    <dt><a href="projects/wordler/">wordler</a></dt>
+    <dt><a href="dev/wordler/">wordler</a></dt>
     <dd>C++ program to solve Wordle</dd>
     <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a> (software version)</dt>
     <dd>Program to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats.</dd>
