--- a/site-files/dev/wordler/index.html
+++ b/site-files/dev/wordler/index.html
@@ -27,11 +27,13 @@
 </header>
 
 <main>
+
 <p><strong>wordler</strong> is a C++ program to help you solve
 <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> puzzles
 by suggesting which word to guess next.</p>
 
 <h1><a name="build"></a>How to Build</h1>
+
 <p><kbd>wordler.sln</kbd> is the project file to build wordler using Microsoft Visual Studio on Windows.</p>
 <p>I have not tried to build wordler on other systems, but I think it should work with a recent version of gcc or clang on Linux or MacOS.</p>
 
@@ -45,6 +47,7 @@ by suggesting which word to guess next.</p>
 <p>The code uses some C++23 features.</p>
 
 <h1><a name="use"></a>How to Use</h1>
+
 <p>After entering a guess into Wordle, run wordler with your guesses and Wordle’s hints as arguments. It will compute a good word for your next guess. For example, if your first guess is “learn” and Wordle displays this:</p>
 <img src="hint1.png" alt="screenshot of a Wordle hint">
 <p>you would run <code>wordler learn .g.y.</code> Note that the hint is specified by using ‘g’ for a green letter, ‘y’ for a yellow letter, and ‘.’ for a grey letter.</p>
@@ -65,6 +68,7 @@ Best guess is "block"
 <p>And so on, until the game is over.</p>
 
 <h2>Other Options</h2>
+
 <p>wordler can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options. Here are the fun ones:</p>
 
 <dl class="inline">
@@ -74,7 +78,30 @@ Best guess is "block"
 </dl>
 
 <h1><a name="works"></a>How It Works</h1>
-<p><em>Info forthcoming...</em></p>
+
+<p><em>More info forthcoming...</em></p>
+
+<h2>Heuristics</h2>
+
+<p>wordler’s job is to come up with a good next guess, based on the hints Wordle has given so far. So, what makes a “good guess”? The heuristic used here is that good guess is one that is likely to result in a good hint – that is, a hint that will cut down the number of possible answers as much as possible.</p>
+
+<h2>Algorithm</h2>
+
+TODO: formatting, wording
+
+<ul>
+<li>Filter the list of all possible answers by matching against the known hints, to get a list of target words. (The correct answer is in that list somewhere.)</li>
+<li>Evaluate each possible guess word:
+    <ul>
+    <li>For each target word:</li>
+        <ul>
+        <li>Generate the hint that Wordle would give if it were the correct answer.</li>
+        <li>Filter the target list and count how many possible words remain.</li>
+        </ul>
+    <li>The average count over all target words is this guess’s score.</li>
+    </ul>
+<li>The guess with the minimum score is the best word to guess.</li>
+</ul>
 
 </main>
 
