--- a/site-files/dev/wordler/index.html
+++ b/site-files/dev/wordler/index.html
@@ -27,25 +27,31 @@
 </header>
 
 <main>
-<p><strong>wordler</strong> is a C++ program to help you solve
+
+<p><strong><kbd>wordler</kbd></strong> is a C++ program to help you solve
 <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> puzzles
 by suggesting which word to guess next.</p>
 
 <h1><a name="build"></a>How to Build</h1>
-<p><kbd>wordler.sln</kbd> is the project file to build wordler using Microsoft Visual Studio on Windows.</p>
-<p>I have not tried to build wordler on other systems, but I think it should work with a recent version of gcc or clang on Linux or MacOS.</p>
+
+<p><kbd>wordler.sln</kbd> is the project file to build <kbd>wordler</kbd> using Microsoft Visual Studio on Windows.</p>
+<p>I have not tried to build <kbd>wordler</kbd> on other systems, but I think it should work with a recent version of gcc or clang on Linux or MacOS.</p>
 
 <p>The source code is in:</p>
 <ul>
 <li><kbd>main.cpp</kbd></li>
 <li><kbd>cmdline.h</kbd></li>
 <li><kbd>timer.h</kbd></li>
+<li><kbd>words-guess.h</kbd>, <kbd>words-target.h</kbd> – word lists</li>
 </ul>
 
 <p>The code uses some C++23 features.</p>
 
 <h1><a name="use"></a>How to Use</h1>
-<p>After entering a guess into Wordle, run wordler with your guesses and Wordle’s hints as arguments. It will compute a good word for your next guess. For example, if your first guess is “learn” and Wordle displays this:</p>
+
+<p>After entering a guess into Wordle, run <kbd>wordler</kbd> with your guesses and Wordle’s hints as arguments. It will compute a good word for your next guess.</p>
+
+<p>For example, if your first guess is “learn” and Wordle displays this:</p>
 <img src="hint1.png" alt="screenshot of a Wordle hint">
 <p>you would run <code>wordler learn .g.y.</code> Note that the hint is specified by using ‘g’ for a green letter, ‘y’ for a yellow letter, and ‘.’ for a grey letter.</p>
 
@@ -54,7 +60,7 @@ Time: 2.30 seconds
 Best guess is "metes"
 </code>
 
-<p>Enter wordler’s guess into Wordle to get another hint. Then, run wordler again with both hints to get the next guess. For example:</p>
+<p>Enter <kbd>wordler</kbd>’s guess into Wordle to get another hint. Then, run <kbd>wordler</kbd> again with both hints to get the next guess. For example:</p>
 <img src="hint2.png" alt="screenshot of a Wordle hint">
 
 <code>$ ./wordler learn .g.y. metes .g...
@@ -65,7 +71,8 @@ Best guess is "block"
 <p>And so on, until the game is over.</p>
 
 <h2>Other Options</h2>
-<p>wordler can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options. Here are the fun ones:</p>
+
+<p><kbd>wordler</kbd> can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options. Here are the fun ones:</p>
 
 <dl class="inline">
 <dt><kbd>--solve &lt;word&gt;</kbd></dt><dd>Solve for the given answer word</dd>
@@ -74,7 +81,46 @@ Best guess is "block"
 </dl>
 
 <h1><a name="works"></a>How It Works</h1>
-<p><em>Info forthcoming...</em></p>
+
+<p><em>More info forthcoming...</em></p>
+
+<h2>Word Lists</h2>
+
+<p>Wordle’s guesses and answers must be valid 5-letter English words. But the game actually has two different lists of valid words:</p>
+
+<p><em>Answers</em> are always ordinary words that most people know.
+These are listed in the file <kbd>words-target.txt</kbd>.</p>
+
+<p><em>Guesses</em> can be any 5-letter word, including many that you’ve never heard of.
+(“aahed“? ”cloot”?? “zymic”???)
+These are in <kbd>words-guess.txt</kbd> (to which the words in <kbd>words-target.txt</kbd> must be added).</p>
+
+<p>Please note that the word lists used here come from an earlier version of Wordle for which these word lists were available. I have found a couple of inaccuracies, so it’s possible that you could run into a guess that isn’t accepted or an answer that cannot be found.</p>
+
+<h2>Heuristic</h2>
+
+<p><kbd>wordler</kbd>’s job is to come up with a good next guess, based on the hints Wordle has given so far. So, what makes a “good guess”?</p>
+    
+<p>The heuristic used here is that a good guess is one that is likely to result in a good hint – that is, a hint that will cut down the set of possible answers as much as possible.</p>
+
+<p>Since the correct answer word is unknown, <kbd>wordler</kbd> tests each guess word against all plausible answers and takes the average number of answers that would remain. Then it picks the guess with the lowest average.</p>
+
+<h2>Algorithm</h2>
+
+<p>Here is how <kbd>wordler</kbd> computes the next guess.</p>
+
+<p>First, filter the list of all possible answers by matching them against the hints given on the command line. This results in a list of <em>target words</em> that match the given hints. The correct answer is in this list somewhere.</p>
+
+<p>Then evaluate every possible guess word. Each guess must be tested against every target word.</p>
+<ul>
+    <li>For each target word:</li>
+    <ul>
+        <li>Generate the hint that Wordle would give if this target word were the correct answer.</li>
+        <li>Filter the target list by matching against this hint and count how many matching words remain.</li>
+    </ul>
+    <li>The total count over all target words is the score for this guess.</li>
+</ul>
+<p>Select the guess word with the <em>lowest</em> score. This is the word that can be expected, on average, to result in a hint that cuts down the list of target words as much as possible.</p>
 
 </main>
 
