--- a/site-files/dev/wordler/index.html
+++ b/site-files/dev/wordler/index.html
@@ -34,6 +34,8 @@ by suggesting which word to guess next.</p>
 
 <h1><a name="build"></a>How to Build</h1>
 
+<p><a href="https://github.com/Len42/wordler">The source code for <kbd>wordler</kbd> is available on GitHub.</a></p>
+
 <p><kbd>wordler.sln</kbd> is the project file to build <kbd>wordler</kbd> using Microsoft Visual Studio on Windows.</p>
 <p>I have not tried to build <kbd>wordler</kbd> on other systems, but I think it should work with a recent version of gcc or clang on Linux or MacOS.</p>
 
