wordler page - wip

--- a/site-files/dev/wordler/index.html
+++ b/site-files/dev/wordler/index.html
@@ -97,7 +97,7 @@ These are listed in the file <kbd>words-target.txt</kbd>.</p>
 (“aahed“? ”cloot”?? “zymic”???)
 These are in <kbd>words-guess.txt</kbd> (to which the words in <kbd>words-target.txt</kbd> must be added).</p>
 
-<p>Please note that the word lists used here come from an earlier version of Wordle for which these word lists were available. I have found a couple of inaccuracies, so it’s possible that you could run into a guess that isn’t accepted or an answer that cannot be found.</p>
+<p>Please note that the word lists used here come from an earlier version of Wordle for which these lists were available. Since then, Wordle has changed its word lists so the lists here are not completely accurate. I have been making corrections as I find errors, but it’s possible that you could run into a guess that isn’t accepted or an answer that cannot be found.</p>
 
 <h2>Heuristic</h2>
 
