--- a/site-files/dev/wordler/index.html
+++ b/site-files/dev/wordler/index.html
@@ -13,13 +13,14 @@
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>wordler</h1>
-<p>C++ program to solve <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a></p>
+<p>C++ program to solve <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> puzzles</p>
 </hgroup>
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#build">Build</a></li>
 <li><a href="#use">Use</a></li>
+<li><a href="#perf">Performance</a></li>
 <li><a href="#works">Workings</a></li>
 <li><a href="/">Home</a></li>
 </ul>
@@ -32,14 +33,14 @@
 <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> puzzles
 by suggesting which word to guess next.</p>
 
-<h1><a name="build"></a>How to Build</h1>
-
 <p><a href="https://github.com/Len42/wordler">The source code for <kbd>wordler</kbd> is available on GitHub.</a></p>
+
+<h1><a name="build"></a>How to Build</h1>
 
 <p><kbd>wordler.sln</kbd> is the project file to build <kbd>wordler</kbd> using Microsoft Visual Studio on Windows.</p>
 <p>I have not tried to build <kbd>wordler</kbd> on other systems, but I think it should work with a recent version of gcc or clang on Linux or MacOS.</p>
 
-<p>The source code is in:</p>
+<p>The source code is in these files:</p>
 <ul>
 <li><kbd>main.cpp</kbd></li>
 <li><kbd>cmdline.h</kbd></li>
@@ -77,14 +78,21 @@ Best guess is "block"
 <p><kbd>wordler</kbd> can be used in other ways. The <kbd>--help</kbd> option will display all of the command-line options. Here are the fun ones:</p>
 
 <dl class="inline">
+<dt><kbd>--play</kbd></dt><dd>Play a game!</dd>
 <dt><kbd>--solve &lt;word&gt;</kbd></dt><dd>Solve for the given answer word</dd>
 <dt><kbd>--all</kbd></dt><dd>Solve all possible answer words (this takes a long time!)</dd>
 <dt><kbd>--stats &lt;file&gt;</kbd></dt><dd>Display stats from a results file that was produced by <kbd>--all</kbd></dd>
 </dl>
 
-<h1><a name="works"></a>How It Works</h1>
+<h1><a name="perf"></a>How Good Is It?</h1>
 
-<p><em>More info forthcoming...</em></p>
+<p><kbd>wordler</kbd> can always win
+<a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a>
+– that is, it can solve any Wordle game in 6 guesses or less, and almost always in 3 or 4 guesses. This was tested against <kbd>words-target.txt</kbd> which, as far as I can tell, contains all possible answers. The file <kbd>results.txt</kbd> lists the number of guesses required to solve any answer.</p>
+
+<p>On my old desktop PC, it can take up to 30 seconds for <kbd>wordler</kbd> to compute a guess given one hint. With more hints it is much faster.</p>
+
+<h1><a name="works"></a>How It Works</h1>
 
 <h2>Word Lists</h2>
 
@@ -130,7 +138,7 @@ These are in <kbd>words-guess.txt</kbd> (to which the words in <kbd>words-target
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
 <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
 </g-col>
-<g-col><div id="license">© 2025 Len Popp<br>
+<g-col><div id="license">© 2026 Len Popp<br>
 This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </div></g-col></g-row></footer>
 
